# jac

./: .gitignore  .gitmodules  Cargo.toml  README.md  ci.sh  flake.nix  index.js  rust-toolchain.toml
.github/workflows/: ci.yml
crates/compiler/: Cargo.toml
crates/compiler/src/: builder.rs  compiler.rs  lib.rs
crates/jacc/: Cargo.toml
crates/jacc/src/: lib.rs  main.rs  temp_execution_trace.rs
crates/parsetrace/: Cargo.toml  README.md
crates/parsetrace/src/: lib.rs  main.rs  trace.rs  utils.rs
crates/quickpars/: Cargo.toml
crates/quickpars/src/: atom.rs  bc.rs  consts.rs  js_module.rs  lib.rs  op.rs  readers.rs  sections.rs
crates/rt/: Cargo.toml
crates/rt/src/: lib.rs
crates/rt/wit/: world.wit
crates/translate/: Cargo.toml
crates/translate/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: main.rs  printer.rs
src/: lib.rs  main.rs  printer.rs
