[workspace]
members = [
  "crates/quickpars",
  "crates/jacc"
]

resolver = "2"

[workspace.package]
version = "1.3.0"
authors = ["The Javy Project Developers"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[workspace.dependencies]
anyhow = "1.0"

[profile.release]
lto = true
opt-level = 3
