[workspace]
members = ["crates/quickpars", "crates/jacc", "crates/parsetrace"]

resolver = "2"

[workspace.package]
version = "1.3.0"
authors = ["The Javy Project Developers"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[workspace.dependencies]
anyhow = "1.0.86"
smallvec = "1.13.1"

[profile.release]
lto = true
opt-level = 3
