[workspace]
members = [
  "crates/quickpars",
  "crates/compiler",
  "crates/parsetrace",
  "crates/translate",
  "crates/rt",
]

[workspace.package]
version = "0.1.0"
authors = ["The Javy Project Developers"]
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"

[workspace.dependencies]
anyhow = "1.0.86"
smallvec = "1.13.1"
javy = "5.1.0"

[package]
name ="jac"
version = { workspace = true }
edition = { workspace = true }


[[bin]]
name = "jac"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
jac-translate = { path = "crates/translate/" }
parsetrace = { path = "crates/parsetrace/" }
anyhow = { workspace = true }
javy = { workspace = true }

[profile.release]
lto = true
opt-level = 3
