[package]
name = "jacc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
quickpars = { path = "../quickpars" }
parsetrace = { path = "../parsetrace" }
javy = { git = "https://github.com/bytecodealliance/javy.git" }

[[bin]]
name = "jacc"
path = "src/main.rs"