[package]
name = "parsetrace"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
smallvec = { workspace = true }
quickpars = { path = "../quickpars" }
javy = { git = "https://github.com/bytecodealliance/javy.git" }
leb128 = "0.2.5"

[[bin]]
name = "parsetrace"
path = "src/main.rs"