[package]
name = "jac-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
jac-translate = { path = "../translate/" }
parsetrace = { path = "../parsetrace/" }
anyhow = { workspace = true }
javy = "5.1.0"
